src/test/ui/binop/binop-mul-bool.rs
// error-pattern:cannot multiply `bool` to `bool`

fn main() { let x = true * false; }
